# cpp_projects

capture_images/: CMakeLists.txt  main.cpp
opencv_inference/: CMakeLists.txt  main.cpp
sub_bg/: CMakeLists.txt  main.cpp
torch_test/: CMakeLists.txt  main.cpp
